--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3.6'
 services:
 
   api:
-    image: node:10.15.3-alpine
+    image: node:16.16.0-alpine3.16
     container_name: tqd-node
     build: .
     ports:
